[APP] Refactoring for connection mux after TLS listener.
