# protocol/password/password.swagger.json
@@ -17,6 +17,7 @@
   "paths": {
     "/v1/password": {
       "post": {
+        "summary": "Encode a given password using default Butcher strategy",
         "operationId": "Encode",
         "responses": {
           "200": {
@@ -41,8 +42,26 @@
         ]
       }
     },
+    "/v1/ping": {
+      "get": {
+        "summary": "Ping the password server. Example for empty query",
+        "operationId": "Ping",
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "$ref": "#/definitions/passwordPongRes"
+            }
+          }
+        },
+        "tags": [
+          "Password"
+        ]
+      }
+    },
     "/v1/validate": {
       "post": {
+        "summary": "Validate a password hash encoded by Butcher",
         "operationId": "Validate",
         "responses": {
           "200": {
@@ -112,6 +131,15 @@
         "valid": {
           "type": "boolean",
           "format": "boolean"
+        }
+      }
+    },
+    "passwordPongRes": {
+      "type": "object",
+      "properties": {
+        "timestamp": {
+          "type": "string",
+          "format": "date-time"
         }
       }
     }
